--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,17 +1,81 @@
-<body id = "footer" class="d-flex flex-column">
-  <div id="page-content">
-    <div class="container text-center">
-      <div class="row justify-content-center">
-        <div class="col-md-7">
-          <h1 class="fw-light mt-4 text-white">Sticky Footer using Flexbox</h1>
-          <p class="lead text-white-50">Use just two Bootstrap utility classes and three custom CSS rules and you will have a flexbox enabled sticky footer for your website!</p>
+<!-- Footer -->
+<footer class="text-center text-lg-start bg-white text-muted">
+  <!-- Section: Social media -->
+  <section class="d-flex justify-content-center justify-content-lg-between p-4 border-bottom">
+    <!-- Left -->
+    <div class="me-5 d-none d-lg-block">
+      <span>Nos acompanhe em nossas redes sociais:</span>
+    </div>
+    <!-- Left -->
+
+    <!-- Right -->
+    <div>
+      <a id="icons" href="" class="me-4 link-secondary">
+        <img src="../assets/facebook.png" width="20" height="20"  alt="">
+      </a>
+      <a id="icons" href="" class="me-4 link-secondary">
+        <img src="../assets/insta.png" width="20" height="20" alt="">
+        
+      </a>
+      <a id="icons" href="" class="me-4 link-secondary">
+        <img src="../assets/linkedin.png" width="20" height="20"  alt="">
+      </a>
+      
+    </div>
+    <!-- Right -->
+  </section>
+  <!-- Section: Social media -->
+
+  <!-- Section: Links  -->
+  <section class="">
+    <div class="container text-center text-md-start mt-5">
+      <!-- Grid row -->
+      <div class="row mt-3">
+        <!-- Grid column -->
+        <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
+          <!-- Content -->
+          <h6 class="text-uppercase fw-bold mb-4">
+            <i class="fas fa-gem me-3 text-secondary"></i>AjudaCerta
+          </h6>
+          <p id="texto">
+            Venha fazer a ajuda certa com a gente!
+          </p>
         </div>
+        <!-- Grid column -->
+
+        <!-- Grid column -->
+       
+        <!-- Grid column -->
+
+        <!-- Grid column -->
+   
+        <!-- Grid column -->
+
+        <!-- Grid column -->
+        <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
+          <!-- Links -->
+          <h6 class="text-uppercase fw-bold mb-4">Contato</h6>
+          <p><img id="iconsF" src="../assets/casa.png" width="15" height="15"  alt=""> São Paulo, SP, BR</p>
+          
+          <p>
+            <img id="iconsF" src="../assets/email.png" width="15" height="15"  alt="">
+            suporte@ajudacerta.com.br
+          </p>
+          <p><img id="iconsF" src="../assets/telefone.png" width="15" height="15"  alt=""> (11) 4342-3432</p>
+          <p><img id="iconsF" src="../assets/telefone.png" width="15" height="15"  alt=""> (11) 2342-3425</p>
+        </div>
+        <!-- Grid column -->
       </div>
+      <!-- Grid row -->
     </div>
+  </section>
+  <!-- Section: Links  -->
+
+  <!-- Copyright -->
+  <div class="text-center p-4" style="background-color: rgba(0, 0, 0, 0.025);">
+    © 2023 Copyright:
+    <a class="text-reset fw-bold" href="https://mdbootstrap.com/">AjudaCerta.com</a>
   </div>
-  <footer id="sticky-footer" class="flex-shrink-0 py-4 bg-dark text-white-50">
-    <div class="container text-center">
-      <small>Copyright &copy; Your Website</small>
-    </div>
-  </footer>
-</body>
+  <!-- Copyright -->
+</footer>
+<!-- Footer -->
