--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,3 +1,63 @@
+
+<header class="bg-dark py-5">
+    <div class="container px-5">
+        <div class="row gx-5 justify-content-center">
+            <div class="col-lg-6">
+                <div class="text-center my-5">
+                    <h1 class="display-5 fw-bolder text-white mb-2">AjudaCerta</h1>
+                    <p class="lead text-white-50 mb-4">Um membro de nossa equipe sempre teve contato com uma ONG local e viu que havia uma certa dificuldade de comunicação entre doador, ONG e beneficiário. A maioria das vezes esse contato era através de aplicativo de mensgem pessoal, o que dificultava por conta de outras conversas que não estão no mesmo assunto. Isso nos fez se motivar em criar algo para solucionar esse problema. Assim surgiu a AjudaCerta.</p>
+                    
+                </div>
+            </div>
+        </div>
+    </div> 
+</header>
+
+
+
+
+<section class="py-5 border-bottom" id="features">
+    <div class="container px-5 my-5">
+        <div class="row gx-5">
+            
+            <div class="">
+                <div class="feature bg-primary bg-gradient text-white rounded-3 mb-3"><i class="bi bi-building"></i></div>
+                <h2 id="titulo" class="h4 fw-bolder">Situação</h2>
+                <p>Nós da AjudaCerta vimos uma grande lacuna nas situações das ONGs em questão de comunicação entre o doador e beneficiário, vimos que há uma defasagem nesse momento e com isso procuramos potencializar essa situação.</p>
+                
+            </div>
+            
+        </div>
+    </div>
+</section>
+
+<section class="py-5 border-bottom" id="features">
+    <div class="container px-5 my-5">
+        <div class="row gx-5">
+            
+            <div class="">
+                <div class="feature bg-primary bg-gradient text-white rounded-3 mb-3"><i class="bi bi-building"></i></div>
+                <h2 id="titulo" class="h4 fw-bolder">Proposta</h2>
+                <p>Com a situação apresentada, buscamos uma maneira de deixar essa comunicação mais fácil e prática. Por isso pensamos em desenvolver um software que pudesse fazer essa mediação entre doador, ONG e beneficiário.</p>
+                
+            </div>
+            
+        </div>
+    </div>
+</section>
+
+
+
+
+
+<!------ Divisão ---------->
+
+
+
+
+
+
+
 <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
 <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
 <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
@@ -14,62 +74,42 @@
             <div class="col-lg-6 mbr-col-md-10">
                 <div class="wrap">
                     <div class="ico-wrap">
-                        <span class="mbr-iconfont fa-volume-up fa"></span>
+                        <span><img src="assets/missao.png"></span>
                     </div>
                     <div class="text-wrap vcenter">
-                        <h2 class="mbr-fonts-style mbr-bold mbr-section-title3 display-5">Stay <span>Successful</span></h2>
-                        <p class="mbr-fonts-style text1 mbr-text display-6">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum</p>
+                        <h2 class="mbr-fonts-style mbr-bold mbr-section-title3 display-5">Missão</h2>
+                        <p class="mbr-fonts-style text1 mbr-text display-6">Facilitar o acesso a doações tanto para ONGs, doadores e beneficiários. </p>
                     </div>
                 </div>
             </div>
             <div class="col-lg-6 mbr-col-md-10">
                 <div class="wrap">
                     <div class="ico-wrap">
-                        <span class="mbr-iconfont fa-calendar fa"></span>
+                        <span><img src="assets/visao.png"></span>
                     </div>
                     <div class="text-wrap vcenter">
-                        <h2 class="mbr-fonts-style mbr-bold mbr-section-title3 display-5">Create
-                            <span>An Effective Team</span>
+                        <h2 class="mbr-fonts-style mbr-bold mbr-section-title3 display-5">
+                            Visão
                         </h2>
-                        <p class="mbr-fonts-style text1 mbr-text display-6">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum</p>
+                        <p class="mbr-fonts-style text1 mbr-text display-6">Torna-se a empresa com maior assistência a um sistema de doação de ONG.</p>
                     </div>
                 </div>
             </div>
-            <div class="col-lg-6 mbr-col-md-10">
+            <div id="terceiro" class="col-lg-6 mbr-col-md-10">
                 <div class="wrap">
                     <div class="ico-wrap">
-                        <span class="mbr-iconfont fa-globe fa"></span>
+                        <span><img src="assets/valor.png" alt=""></span>
                     </div>
                     <div class="text-wrap vcenter">
-                        <h2 class="mbr-fonts-style mbr-bold mbr-section-title3 display-5">Launch
-                            <span>A Unique Project</span>
+                        <h2 class="mbr-fonts-style mbr-bold mbr-section-title3 display-5">
+                            Valor
                         </h2>
-                        <p class="mbr-fonts-style text1 mbr-text display-6">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum</p>
+                        <p class="mbr-fonts-style text1 mbr-text display-6">Excelênca com cliente, respeito, empatia, inovação, tranparência, colaboração e responsabilidade.</p>
                     </div>
                 </div>
             </div>
-            <div class="col-lg-6 mbr-col-md-10">
-                <div class="wrap">
-                    <div class="ico-wrap">
-                        <span class="mbr-iconfont fa-trophy fa"></span>
-                    </div>
-                    <div class="text-wrap vcenter">
-                        <h2 class="mbr-fonts-style mbr-bold mbr-section-title3 display-5">Achieve <span>Your Targets</span></h2>
-                        <p class="mbr-fonts-style text1 mbr-text display-6">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum</p>
-                    </div>
-                </div>
-            </div>
-            <div id="quinto" class="col-lg-6 mbr-col-md-10">
-              <div class="wrap">
-                  <div class="ico-wrap">
-                      <span class="mbr-iconfont fa-trophy fa"></span>
-                  </div>
-                  <div class="text-wrap vcenter">
-                      <h2 class="mbr-fonts-style mbr-bold mbr-section-title3 display-5">Achieve <span>Your Targets</span></h2>
-                      <p class="mbr-fonts-style text1 mbr-text display-6">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum</p>
-                  </div>
-              </div>
-          </div>
+            
+            
 
 
 
@@ -108,7 +148,7 @@
 <!-- Team -->
 <section id="team" class="pb-5">
     <div class="container">
-        <h5 class="section-title h1">OUR TEAM</h5>
+        <h5 class="section-title h1">Nosso time</h5>
         <div class="row">
             <!-- Team member -->
             <div class="col-xs-12 col-sm-6 col-md-4">
@@ -117,17 +157,17 @@
                         <div class="frontside">
                             <div class="card">
                                 <div class="card-body text-center">
-                                    <p><img class=" img-fluid" src="https://sunlimetech.com/portfolio/boot4menu/assets/imgs/team/img_01.png" alt="card image"></p>
-                                    <h4 class="card-title">Sunlimetech</h4>
-                                    <p class="card-text">This is basic card with image on top, title, description and button.</p>
-                                    <a href="https://www.fiverr.com/share/qb8D02" class="btn btn-primary btn-sm"><i class="fa fa-plus"></i></a>
+                                    <p><img class=" img-fluid" src="assets/lima.jpg" alt="card image"></p>
+                                    <h4 class="card-title">Gabriel Lima</h4>
+                                    <p class="card-text">Designer</p>
+                                    
                                 </div>
                             </div>
                         </div>
                         <div class="backside">
                             <div class="card">
                                 <div class="card-body text-center mt-4">
-                                    <h4 class="card-title">Sunlimetech</h4>
+                                    <h4 class="card-title">Designer</h4>
                                     <p class="card-text">This is basic card with image on top, title, description and button.This is basic card with image on top, title, description and button.This is basic card with image on top, title, description and button.</p>
                                     <ul class="list-inline">
                                         <li class="list-inline-item">
@@ -168,17 +208,17 @@
                         <div class="frontside">
                             <div class="card">
                                 <div class="card-body text-center">
-                                    <p><img class=" img-fluid" src="https://sunlimetech.com/portfolio/boot4menu/assets/imgs/team/img_03.png" alt="card image"></p>
-                                    <h4 class="card-title">Sunlimetech</h4>
-                                    <p class="card-text">This is basic card with image on top, title, description and button.</p>
-                                    <a href="https://www.fiverr.com/share/qb8D02" class="btn btn-primary btn-sm"><i class="fa fa-plus"></i></a>
+                                    <p><img class=" img-fluid" src="assets/joao.png" alt="card image"></p>
+                                    <h4 class="card-title">João Vitor</h4>
+                                    <p class="card-text">CEO</p>
+                                    
                                 </div>
                             </div>
                         </div>
                         <div class="backside">
                             <div class="card">
                                 <div class="card-body text-center mt-4">
-                                    <h4 class="card-title">Sunlimetech</h4>
+                                    <h4 class="card-title">CEO</h4>
                                     <p class="card-text">This is basic card with image on top, title, description and button.This is basic card with image on top, title, description and button.This is basic card with image on top, title, description and button.</p>
                                     <ul class="list-inline">
                                         <li class="list-inline-item">
@@ -216,17 +256,17 @@
                         <div class="frontside">
                             <div class="card">
                                 <div class="card-body text-center">
-                                    <p><img class=" img-fluid" src="https://sunlimetech.com/portfolio/boot4menu/assets/imgs/team/img_04.jpg" alt="card image"></p>
-                                    <h4 class="card-title">Sunlimetech</h4>
-                                    <p class="card-text">This is basic card with image on top, title, description and button.</p>
-                                    <a href="https://www.fiverr.com/share/qb8D02" class="btn btn-primary btn-sm"><i class="fa fa-plus"></i></a>
+                                    <p><img class=" img-fluid" src="assets/camila.png" alt="card image"></p>
+                                    <h4 class="card-title">Camila Menezes</h4>
+                                    <p class="card-text">Administradora de banco de dados</p>
+                                    
                                 </div>
                             </div>
                         </div>
                         <div class="backside">
                             <div class="card">
                                 <div class="card-body text-center mt-4">
-                                    <h4 class="card-title">Sunlimetech</h4>
+                                    <h4 class="card-title">Administradora de banco de dados</h4>
                                     <p class="card-text">This is basic card with image on top, title, description and button.This is basic card with image on top, title, description and button.This is basic card with image on top, title, description and button.</p>
                                     <ul class="list-inline">
                                         <li class="list-inline-item">
@@ -264,17 +304,17 @@
                         <div class="frontside">
                             <div class="card">
                                 <div class="card-body text-center">
-                                    <p><img class=" img-fluid" src="https://sunlimetech.com/portfolio/boot4menu/assets/imgs/team/img_05.png" alt="card image"></p>
-                                    <h4 class="card-title">Sunlimetech</h4>
-                                    <p class="card-text">This is basic card with image on top, title, description and button.</p>
-                                    <a href="https://www.fiverr.com/share/qb8D02" class="btn btn-primary btn-sm"><i class="fa fa-plus"></i></a>
+                                    <p><img class=" img-fluid" src="assets/vinicin.jpg" alt="card image"></p>
+                                    <h4 class="card-title">Vinicius Mateos</h4>
+                                    <p class="card-text">Programador</p>
+                                    
                                 </div>
                             </div>
                         </div>
                         <div class="backside">
                             <div class="card">
                                 <div class="card-body text-center mt-4">
-                                    <h4 class="card-title">Sunlimetech</h4>
+                                    <h4 class="card-title">Programador</h4>
                                     <p class="card-text">This is basic card with image on top, title, description and button.This is basic card with image on top, title, description and button.This is basic card with image on top, title, description and button.</p>
                                     <ul class="list-inline">
                                         <li class="list-inline-item">
@@ -312,17 +352,17 @@
                         <div class="frontside">
                             <div class="card">
                                 <div class="card-body text-center">
-                                    <p><img class=" img-fluid" src="https://sunlimetech.com/portfolio/boot4menu/assets/imgs/team/img_06.jpg" alt="card image"></p>
-                                    <h4 class="card-title">Sunlimetech</h4>
-                                    <p class="card-text">This is basic card with image on top, title, description and button.</p>
-                                    <a href="https://www.fiverr.com/share/qb8D02" class="btn btn-primary btn-sm"><i class="fa fa-plus"></i></a>
+                                    <p><img class=" img-fluid" src="../assets/beatriz.jpg"   alt=""></p>
+                                    <h4 class="card-title">Beatriz Oliveira</h4>
+                                    <p class="card-text">Recursos Humanos</p>
+                                    
                                 </div>
                             </div>
                         </div>
                         <div class="backside">
                             <div class="card">
                                 <div class="card-body text-center mt-4">
-                                    <h4 class="card-title">Sunlimetech</h4>
+                                    <h4 class="card-title">RH</h4>
                                     <p class="card-text">This is basic card with image on top, title, description and button.This is basic card with image on top, title, description and button.This is basic card with image on top, title, description and button.</p>
                                     <ul class="list-inline">
                                         <li class="list-inline-item">
