--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -25,7 +25,7 @@ section {
 
 section .section-title {
     text-align: center;
-    color: #007b5e;
+    color: #db9448;
     margin-bottom: 50px;
     text-transform: uppercase;
 }
@@ -95,12 +95,12 @@ section .section-title {
 
 .backside .card a {
     font-size: 18px;
-    color: #007b5e !important;
+    color: #db9448 !important;
 }
 
 .frontside .card .card-title,
 .backside .card .card-title {
-    color: #007b5e !important;
+    color: #db9448 !important;
 }
 
 .frontside .card .card-body img {
@@ -136,8 +136,7 @@ section .section-title {
 
 
 
-
-#quinto{
+#terceiro{
   margin-left: 280px;
 }
 
@@ -156,12 +155,13 @@ section {
 }
 
 .wrap:hover {
-  background: linear-gradient(135deg,#6394ff 0%,#0a193b 100%);
+  background: linear-gradient(135deg,#d88537 0%,#0a193b 100%);
   color: white;
 }
 
 .ico-wrap {
-  margin: auto;
+  padding-right: 20px;
+  padding-top: 14px;
 }
 
 .mbr-iconfont {
@@ -190,10 +190,30 @@ h2 {
 }
 
 p {
-  padding-top: 0.5rem;
+  padding-top: 1px;
   padding-bottom: 0.5rem;
   line-height: 25px;
 }
 .display-6 {
   font-family: 'Source Sans Pro',sans-serif;
   font-size: 1re}
+
+
+
+
+
+
+
+
+
+
+  
+
+  #titulo{
+    text-align: center;
+  }
+
+  #visao{
+    padding-left: 3px;
+  }
+
