Atualizado texto AjudaCerta

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -5,8 +5,8 @@
             <div class="col-lg-6">
                 <div class="text-center my-5">
                     <h1 class="display-5 fw-bolder text-white mb-2">AjudaCerta</h1>
-                    <p class="lead text-white-50 mb-4">Um membro de nossa equipe sempre teve contato com uma ONG local e viu que havia uma certa dificuldade de comunicação entre doador, ONG e beneficiário. A maioria das vezes esse contato era através de aplicativo de mensgem pessoal, o que dificultava por conta de outras conversas que não estão no mesmo assunto. Isso nos fez se motivar em criar algo para solucionar esse problema. Assim surgiu a AjudaCerta.</p>
-                    
+                    <p class="lead text-white-50 mb-4">Analisando as comunicações realizadas entre ONGs, doadores e beneficiários, percebemos que por conta destas conversas em sua grande maioria serem realizadas através de aplicativos de bate-papo casuais, apresentavam defasagem e maior dificuldade de gerenciamento e controle das doações.</p>
+                    <p class="lead text-white-50 mb-4">Através da percepção desta situação, nossa equipe deu origem ao AjudaCerta, sistema que promete ser uma solução facilitadora tanto para o sistema de comunicação entre ONGs, beneficiários e doadores quanto para o gerenciamento das doações.</p>
                 </div>
             </div>
         </div>
